--- a/middle_earth/css/style.css
+++ b/middle_earth/css/style.css
@@ -1,30 +1,12 @@
-.regions {
-    fill: #black;
-    stroke: #999;
-    stroke-width: 2px;
-}
-
-.countries {
-    fill: #black;
-    stroke: #black;
-    stroke-width: 2px;
-}
-
-.gratLines {
-    fill: none;
-    stroke: #999;
-    stroke-width: 1px;
-}
-
-.gratBackground {
-    fill: #D5E3FF;
-}
-
 .map {
-    border: medium solid #999;
+	border: medium solid #999;
 }
-
-
+.chart {
+    width: 15%;
+    padding: 100px;
+    display: inline-block;
+    vertical-align: top;
+} 
 .chart {
     background-color: rgba(128,128,128,.2);
     border: medium solid #999;
