--- a/middle_earth/css/style.css
+++ b/middle_earth/css/style.css
@@ -1,7 +1,28 @@
+body, html {
+    height: 100%;
+    font-family: 'Macondo Swash Caps', cursive;
+}
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    
+    height: 20%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 .map {
     float: left;
     width: 75%;
-    height: 50%;
+    height: 80%;
 	border: medium solid black;
 }
 .panel {
@@ -28,7 +49,7 @@
 
 .panelFrame {
     fill: none;
-    stroke: black;
+    stroke: #999;
     stroke-width: 3px;
     shape-rendering: crispEdges;
 }
